--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,40 +1,54 @@
 on:
   push:
-    branches: [develop, stage, main]
+    branches: [develop, stage, prod]
 
 jobs: 
   dev:
     name: deploy cloudrun to dev environment
-    # if: ${{ github.ref == 'refs/heads/develop' || github.base_ref == 'develop' }}
-    if: ${{ github.ref == 'refs/heads/main' || github.base_ref == 'main' }}
-    uses: ./.github/workflows/_deployment.yaml
-    permissions: 
-      id-token: write
-      contents: read
+    if: ${{ github.ref == 'refs/heads/develop' || github.base_ref == 'develop' }}
+    uses: littleworks-inc/gcp-cloud-run/.github/workflows/deployment.yml@main
+    permissions:
+      contents: 'read'
+      id-token: 'write'
     with: 
       environment: dev
-      PROJECT_ID: nomadic-rush-408023
+      ref: ${{ github.sha }}
+      PROJECT_ID: nomadic
       GAR_LOCATION: northamerica-northeast2
       REGION: northamerica-northeast2
+      APP: gcpcli
+    secrets:
+      workload_identity_provider: ${{ secrets.workload_identity_provider }}
+      service_account: ${{ secrets.service_account }}
+  stage:
+    if: ${{ github.ref == 'refs/heads/stage' || github.base_ref == 'stage' }}
+    uses: littleworks-inc/gcp-cloud-run/.github/workflows/deployment.yml@main
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+    with: 
+      environment: dev
+      PROJECT_ID: nomadic
+      GAR_LOCATION: northamerica-northeast2
+      REGION: northamerica-northeast2
+      APP: gcpcli
       ref: ${{ github.sha }}
-    secrets: inherit
-  # stage:
-  #   if: ${{ github.ref == 'refs/heads/stage' || github.base_ref == 'stage' }}
-  #   uses: ./.github/workflows/_deployment.yaml
-  #   permissions: 
-  #     id-token: write
-  #     contents: read
-  #   with: 
-  #     environment: stage
-  #     ref: ${{ github.sha }}
-  #   secrets: inherit
-  # prod: 
-  #   if: ${{ github.ref == 'refs/heads/main' || github.base_ref == 'main' }}
-  #   uses: ./.github/workflows/_deployment.yaml
-  #   permissions: 
-  #     id-token: write
-  #     contents: read
-  #   with:
-  #     environment: prod
-  #     ref: ${{ github.sha }}
-  #   secrets: inherit
+    secrets:
+      workload_identity_provider: ${{ secrets.workload_identity_provider }}
+      service_account: ${{ secrets.service_account }}
+  prod: 
+    if: ${{ github.ref == 'refs/heads/prod' || github.base_ref == 'prod' }}
+    uses: littleworks-inc/gcp-cloud-run/.github/workflows/deployment.yml@main
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+    with: 
+      environment: dev
+      PROJECT_ID: nomadic
+      GAR_LOCATION: northamerica-northeast2
+      REGION: northamerica-northeast2
+      APP: gcpcli
+      ref: ${{ github.sha }}
+    secrets:
+      workload_identity_provider: ${{ secrets.workload_identity_provider }}
+      service_account: ${{ secrets.service_account }}
